--- a/index.html
+++ b/index.html
@@ -105,7 +105,16 @@
             <h1>📌 JASA JOKI BLOX FRUITS - HACK STORE 📌</h1>
             <p>🔥 Cepat - Aman - Terpercaya 🔥</p>
         </div>
-
+        <div style="text-align: center; margin-top: 3rem;">
+    <h2 style="color: var(--neon-purple);">🎮 Coba Game Buatan Kami!</h2>
+    <iframe frameborder="0" 
+        src="https://itch.io/embed/3386290?border_width=0&amp;border_color=000000" 
+        width="550" height="165">
+        <a href="https://xobe-development.itch.io/tebakx-the-ultimate-number-challenge">
+            🔥 TebakX 🔥 by XOBE DEVELOPMENT
+        </a>
+    </iframe>
+</div>
         <!-- Level Joki -->
         <div class="price-grid">
             <div class="price-card">
