--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
                 <a href="https://wa.me/6283141707524" style="background: var(--neon-purple); padding: 10px 20px; border-radius: 50px; color: white; text-decoration: none;">
                     <i class="fab fa-whatsapp"></i> Admin 1 (083141707524)
                 </a>
-                <a href="https://wa.me/6283141707524" style="background: var(--neon-blue); padding: 10px 20px; border-radius: 50px; color: white; text-decoration: none;">
-                    <i class="fab fa-whatsapp"></i> Forum Order (083141707524)
+                <a href="https://wa.me/6281258837595 style="background: var(--neon-blue); padding: 10px 20px; border-radius: 50px; color: white; text-decoration: none;">
+                    <i class="fab fa-whatsapp"></i> Admin 2(081258837595)
                 </a>
             </div>
         </div>
@@ -421,11 +421,11 @@
     </div>
     <!-- WhatsApp Floating Button -->
     <div class="whatsapp-float">
-        <a href="https://wa.me/6283893233950" class="whatsapp-btn">
-            <i class="fab fa-whatsapp"></i> Order via WA 1
+        <a href="https://wa.me/6283141707524" class="whatsapp-btn">
+            <i class="fab fa-whatsapp"></i> Order via WA Admin 1
         </a>
         <a href="https://wa.me/6281258837595" class="whatsapp-btn">
-            <i class="fab fa-whatsapp"></i> Admin 2 (081258837595)
+            <i class="fab fa-whatsapp"></i> Order via WA Admin 2 (081258837595)
         </a>
         <a href="https://www.whatsapp.com/channel/0029VajUJEH5Ui2P1ArizJ0V" class="whatsapp-btn" style="background: linear-gradient(135deg,#25d366,#fbbf24);color:#23243a;font-weight:bold;" target="_blank">
             <i class="fab fa-whatsapp"></i> Gabung Channel Testimoni ⭐
